--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "autoprefixer": "^10.3.2",
     "framer-motion": "^4.1.17",
+    "netlify-cli": "^6.7.5",
     "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
     "react": "^17.0.2",
